Test for OAuth2 API, Credentials Membrane Code Flow, Fix for OAuth2 consent